# the_empathetic_expert

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/cache/embeddings/faiss_index.index/: index.faiss  index.pkl
prompts/: empathetic_expert.yaml
rag_bk/: st_function.py
rag_bk/modules/: agent.py  google.py  handler.py
